fetch countries and show them in homepage

--- a/src/app.scss
+++ b/src/app.scss
@@ -28,3 +28,7 @@
     padding-right: 4rem!important;
     padding-left: 4rem!important;
 }
+
+.main_shadow {
+    box-shadow: 0px 6px 9px 0px var( --Boxshadow);
+}
