during developing in country page componenet

--- a/src/app.scss
+++ b/src/app.scss
@@ -9,7 +9,7 @@
     --BackgroundElmns: #fff;
     --textColor: #111517;
     --InputColor: #858585;
-    --Boxshadow: #F2F2F2
+    --Boxshadow: #E3E3E3;
 }
 
 [data-theme="dark"] {
