--- a/src/pages/countryPage/styles.scss
+++ b/src/pages/countryPage/styles.scss
@@ -1,4 +1,4 @@
-.country_page {
+.countryPage {
     margin-top: 4rem;
     img {
         width: 90%;
@@ -13,6 +13,34 @@
         margin-bottom: 4rem;
         svg {
             margin-right: .4rem;
+        }
+    }
+    &_info {
+        color: var(--textColor);
+        h3 {
+            margin-bottom: 2rem;
+        }
+        h5 {
+            font-weight: 600;
+            font-size: 1rem;
+            text-transform: capitalize;
+            margin-bottom: 1rem;
+            span {
+                font-weight: 400;
+                padding-left: 5px;
+            }
+        }
+        .borders {
+            .badge {
+                color: var(--textColor);
+                font-size: .8rem;
+                margin-right: 10px;
+                padding: 8px 25px;
+                cursor: pointer;
+                &:nth-of-type(1) {
+                    margin-left: 1rem;
+                }
+            }
         }
     }
 }
