--- a/src/pages/countryPage/styles.scss
+++ b/src/pages/countryPage/styles.scss
@@ -37,6 +37,7 @@
                 margin-right: 10px;
                 padding: 8px 25px;
                 cursor: pointer;
+                background-color: var(--BackgroundElmns)!important;
                 &:nth-of-type(1) {
                     margin-left: 1rem;
                 }
