--- a/src/components/countryCard/styles.scss
+++ b/src/components/countryCard/styles.scss
@@ -1,4 +1,5 @@
 .card {
+    padding-bottom: 2rem;
     cursor: pointer;
     border-radius: 9px;
     overflow: hidden;
@@ -7,5 +8,15 @@
     .card-img-top {
         height: 13rem;
         border-radius: unset;
+    }
+    &-body {
+        padding-left: 18px;
+    }
+    &-title {
+        font-weight: 700;
+        padding: 1rem 0;
+    }
+    &-text {
+        margin-bottom: 5px;
     }
 }
