--- a/src/pages/countryPage/styles.scss
+++ b/src/pages/countryPage/styles.scss
@@ -31,16 +31,19 @@
             }
         }
         .borders {
+            margin-top: 3rem;
+            h5 {
+                white-space: nowrap;
+                margin-right: 1rem;
+            }
             .badge {
                 color: var(--textColor);
                 font-size: .8rem;
                 margin-right: 10px;
                 padding: 8px 25px;
+                margin-bottom: .7rem;
                 cursor: pointer;
                 background-color: var(--BackgroundElmns)!important;
-                &:nth-of-type(1) {
-                    margin-left: 1rem;
-                }
             }
         }
     }
